--- a/docs/rtk-query/usage/code-generation.mdx
+++ b/docs/rtk-query/usage/code-generation.mdx
@@ -62,6 +62,15 @@ and then call the code generator:
 npx @rtk-query/codegen-openapi openapi-config.ts
 ```
 
+#### Generating tags
+
+If your OpenAPI specification uses [tags](https://swagger.io/docs/specification/grouping-operations-with-tags/), you can specify the `tag` option to the codegen.  
+That will result in all generated endpoints having `providesTags`/`invalidatesTags` declarations for the `tags` of their respective operation definition.
+
+Note that this will only result in string tags with no ids, so it might lead to scenarios where too much is invalidated and unneccessary requests are made on mutation.
+
+In that case it is still recommended to manually specify tags by using [`enhanceEndpoints`](./code-splitting.mdx) on top of the generated api and manually declare `providesTags`/`invalidatesTags`.
+
 ### Programmatic usage
 
 ```ts no-transpile title="src/store/petApi.ts"
@@ -90,6 +99,7 @@ interface SimpleUsage {
   hooks?:
     | boolean
     | { queries: boolean; lazyQueries: boolean; mutations: boolean }
+  tag?: boolean
   outputFile: string
   filterEndpoints?:
     | string
