docs(alm): add missing generic parameter in `TypeScript Usage` section
Other changes:

- add missing generic param in `AppAddListener` of counter example
- clean up store.ts in counter example

Context:

- https://github.com/reduxjs/redux-toolkit/pull/2118
- https://github.com/reduxjs/redux-toolkit/issues/2105

--- a/docs/api/createListenerMiddleware.mdx
+++ b/docs/api/createListenerMiddleware.mdx
@@ -391,13 +391,13 @@ To fix this, the middleware provides types for defining "pre-typed" versions of 
 import { createListenerMiddleware, addListener } from '@reduxjs/toolkit'
 import type { TypedStartListening, TypedAddListener } from '@reduxjs/toolkit'
 
-import type { RootState } from './store'
+import type { RootState, AppDispatch } from './store'
 
 export const listenerMiddleware = createListenerMiddleware()
 
 export const startAppListening =
-  listenerMiddleware.startListening as TypedStartListening<RootState>
-export const addAppListener = addListener as TypedAddListener<RootState>
+  listenerMiddleware.startListening as TypedStartListening<RootState, AppDispatch>
+export const addAppListener = addListener as TypedAddListener<RootState, AppDispatch>
 ```
 
 Then import and use those pre-typed methods in your components.
