Tweak listener middleware example

--- a/docs/api/createListenerMiddleware.mdx
+++ b/docs/api/createListenerMiddleware.mdx
@@ -54,7 +54,21 @@ listenerMiddleware.startListening({
       // Use the listener API methods to dispatch, get state,
       // unsubscribe the listener, start child tasks, and more
       listenerApi.dispatch(todoAdded('Buy pet food'))
-      listenerApi.unsubscribe()
+
+      // Spawn "child tasks" that can do more work and return results
+      const task = listenerApi.fork(async (forkApi) => {
+        // Can pause execution
+        await forkApi.delay(5)
+        // Complete the child by returning a value
+        return 42
+      })
+
+      const result = await task.result
+      // Unwrap the child result in the listener
+      if (result.status === 'ok') {
+        // Logs the `42` result value that was returned
+        console.log('Child succeeded: ', result.value)
+      }
     }
   },
 })
