docs(rtk-query): update axios base query example
- add params for query parameters
- add error message in case of network error

--- a/docs/rtk-query/usage/customizing-queries.mdx
+++ b/docs/rtk-query/usage/customizing-queries.mdx
@@ -251,18 +251,22 @@ const axiosBaseQuery =
       url: string
       method: AxiosRequestConfig['method']
       data?: AxiosRequestConfig['data']
+      params?: AxiosRequestConfig['params']
     },
     unknown,
     unknown
   > =>
-  async ({ url, method, data }) => {
+  async ({ url, method, data, params }) => {
     try {
-      const result = await axios({ url: baseUrl + url, method, data })
+      const result = await axios({ url: baseUrl + url, method, data, params })
       return { data: result.data }
     } catch (axiosError) {
       let err = axiosError as AxiosError
       return {
-        error: { status: err.response?.status, data: err.response?.data },
+        error: {
+          status: err.response?.status,
+          data: err.response?.data || err.message
+        },
       }
     }
   }
