--- a/docs/rtk-query/usage/prefetching.mdx
+++ b/docs/rtk-query/usage/prefetching.mdx
@@ -26,16 +26,23 @@ Similar to the [`useMutation`](./mutations) hook, the `usePrefetch` hook will no
 It accepts two arguments: the first is the key of a query action that you [defined in your API service](../api/createApi#endpoints), and the second is an object of two optional parameters:
 
 ```ts title="usePrefetch Signature" no-transpile
+export interface PrefetchActionCreatorResult {
+  unwrap(): Promise<void>,
+  abort(): void
+}
+
 export type PrefetchOptions =
-  | { force?: boolean }
   | {
-      ifOlderThan?: false | number;
-    };
+      ifOlderThan?: false | number,
+      keepSubscriptionFor?: number
+    }
+  | { force?: boolean, keepSubscriptionFor?: number }
+
 
 usePrefetch<EndpointName extends QueryKeys<Definitions>>(
     endpointName: EndpointName,
     options?: PrefetchOptions
-  ): (arg: QueryArgFrom<Definitions[EndpointName]>, options?: PrefetchOptions) => void;
+  ): (arg: QueryArgFrom<Definitions[EndpointName]>, options?: PrefetchOptions) => PrefetchActionCreatorResult;
 ```
 
 ### Customizing the Hook Behavior
