--- a/docs/rtk-query/usage/migrating-to-rtk-query.mdx
+++ b/docs/rtk-query/usage/migrating-to-rtk-query.mdx
@@ -210,6 +210,8 @@ export const selectDataByName = (state: RootState, name: string) =>
   state.pokemon.dataByName[name]
 
 // file: src/store.ts noEmit
+import { useDispatch } from 'react-redux'
+import { EnhancedStore } from '@reduxjs/toolkit'
 interface Pokemon {}
 type RequestState = 'pending' | 'fulfilled' | 'rejected'
 
@@ -221,10 +223,14 @@ export type RootState = {
   pokemon: typeof initialPokemonSlice
 }
 
+export declare const store: EnhancedStore<RootState> 
+export type AppDispatch = typeof store.dispatch
+export declare const useAppDispatch: () => (...args: any[])=> any;
+
 // file: src/hooks.ts
 import { useEffect } from 'react'
-import { useDispatch, useSelector } from 'react-redux'
-import { RootState } from './store'
+import { useSelector } from 'react-redux'
+import { RootState, useAppDispatch } from './store'
 import {
   fetchPokemonByName,
   selectStatusByName,
@@ -233,7 +239,7 @@ import {
 
 // highlight-start
 export function useGetPokemonByNameQuery(name: string) {
-  const dispatch = useDispatch()
+  const dispatch = useAppDispatch()
   // select the current status from the store state for the provided name
   const status = useSelector((state: RootState) =>
     selectStatusByName(state, name)
